--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,7 +19,10 @@ set -g status-position top       # macOS / darwin style
 # set -g pane-active-border-style 'fg=magenta,bg=default'
 # set -g mode-keys emacs
 # set -g pane-border-style 'fg=brightblack,bg=default'
-
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux#v2.1.3'
