--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,13 +19,15 @@ set -g status-position top       # macOS / darwin style
 # set -g pane-active-border-style 'fg=magenta,bg=default'
 # set -g mode-keys emacs
 # set -g pane-border-style 'fg=brightblack,bg=default'
-bind-key h select-pane -L
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key l select-pane -R
+# bind-key h select-pane -L
+# bind-key j relect-pane -D
+# bind-key k select-pane -U
+# bind-key l select-pane -R
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux#v2.1.3'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
 # catppuccin config
 set -g @catppuccin_window_left_separator ""
@@ -47,6 +49,8 @@ set -g @catppuccin_directory_text "#{b:pane_current_path}"
 set -g @catppuccin_meetings_text "#($HOME/.config/tmux/scripts/cal.sh)"
 set -g @catppuccin_date_time_text "%H:%M"
 
+# tmux-continuum
+set -g @continuum-restore 'on'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 set -g status-style bg=default
